plugins {
    id 'application'
    alias(libs.plugins.springboot)
}

repositories {
    mavenCentral()
    maven { url 'https://jitpack.io' }
}

group 'bisq'

apply plugin: "org.springframework.boot"
apply plugin: 'io.spring.dependency-management'

version = file("src/main/resources/version.txt").text.trim()

application {
    project.mainClassName = 'bisq.price.Main'
}

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(21))
    }
}

jar.manifest.attributes(
        "Implementation-Title": project.name,
        "Implementation-Version": version
)

dependencies {
    implementation enforcedPlatform(project(':platform'))

    implementation libs.bundles.knowm.xchange.libs

    implementation libs.logback.core
    implementation libs.logback.classic
    compileOnly libs.lombok
    annotationProcessor libs.lombok

    implementation(libs.spring.boot.starter.web)
    implementation(libs.spring.boot.starter.webflux)

    testAnnotationProcessor libs.lombok
    testCompileOnly libs.lombok
    testImplementation libs.spring.boot.starter.test
}

clean.doFirst {
    // Remove the project root level 'bisq-*' scripts and 'lib' dir generated at the end of the assemble task.
    delete fileTree(dir: projectDir, include: ['bisq-pricenode', 'bisq-pricenode.bat']), 'lib'
}

test {
    useJUnitPlatform()
}
